item-page.html done. All pages done

--- a/css/partials/_base.scss
+++ b/css/partials/_base.scss
@@ -103,3 +103,9 @@ $black: #39393c;
   color: #fff;
   text-transform: uppercase;
 }
+
+%fontTableContent {
+  font-family: "HelveticaBold";
+  font-size: 16px; 
+  color: #000;
+}
